--- a/NRP/src/app/components/inicio/inicio.component.html
+++ b/NRP/src/app/components/inicio/inicio.component.html
@@ -16,7 +16,7 @@
 
       <div class="row">
         <div class="col">
-          <h1 class="text-black mt-3 ms-4">Proyectos</h1>
+          <h1 class="text-black mt-3 ms-4">Mis Proyectos</h1>
         </div>
       </div>
       <div class="row justify-content-end">
@@ -33,19 +33,28 @@
       </div>
       <div class="row">
         <div class="col">
+          <div *ngIf = "arrProyectos.length == 0" class="ms-3">
+            <h2>No tienes ningún proyecto creado</h2>
+          </div>
           <ul class="list-group list-group-flush ms-3">
-            <li class="list-group-item">
-              <a [routerLink]="['/proyecto']">Proyecto 1</a>
-            </li>
-            <li class="list-group-item">
-              <a [routerLink]="['/proyecto']">Proyecto 2</a>
-            </li>
-            <li class="list-group-item">
-              <a [routerLink]="['/proyecto']">Proyecto 3</a>
-            </li>
-          </ul>
+              <li *ngFor = "let proyecto of arrProyectos" class="list-group-item">
+                <a [routerLink]="['/proyecto',proyecto._id]">
+                  {{proyecto.nombre}}
+                </a>
+            </ul>
+            
         </div>
       </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <h1 class="text-black mt-3 ms-4">Proyectos en los que participo</h1>
+        </div>
+      </div>
+      <div *ngIf = "arrProyectosParticipo.length == 0" class="ms-3 text-center" >
+        <h2>No participas en ningún proyecto</h2>
+      </div>
+     
 
       <!--Fin del contenido de INICIO-->
     </div>
