--- a/NRP/src/app/components/inicio/inicio.component.html
+++ b/NRP/src/app/components/inicio/inicio.component.html
@@ -21,7 +21,7 @@
       </div>
       <div class="row justify-content-end">
         <div class="col-1">
-          <a [routerLink]="['/crear-proyecto']"
+          <a [routerLink]="['/crear-proyecto',usuario.id]"
             ><img
               id="carpeta"
               src="./assets/carpeta.png"
@@ -33,11 +33,11 @@
       </div>
       <div class="row">
         <div class="col">
-          <div *ngIf = "arrProyectos.length == 0" class="ms-3">
+          <div *ngIf = "arrProyectosCreados.length == 0" class="ms-3">
             <h2>No tienes ningún proyecto creado</h2>
           </div>
           <ul class="list-group list-group-flush ms-3">
-              <li *ngFor = "let proyecto of arrProyectos" class="list-group-item">
+              <li *ngFor = "let proyecto of arrProyectosCreados" class="list-group-item">
                 <a [routerLink]="['/proyecto',proyecto._id]">
                   {{proyecto.nombre}}
                 </a>
