--- a/NRP/src/app/components/crear-tarea/crear-tarea.component.html
+++ b/NRP/src/app/components/crear-tarea/crear-tarea.component.html
@@ -83,7 +83,7 @@
 
             <div class="row mt-5 ms-4 ">
                 <div class="col-2">
-                    <span>Añadir usuarios a la tarea</span>
+                    <span>Añadir usuario a la tarea</span>
                 </div>
                 <div class="col-1">
                     <img id="addUsuario" src="./assets/add-user.png" alt="carpeta" width="55" height="55" style="cursor: pointer;" (click)="mostrarListaClientes()" />
@@ -112,7 +112,7 @@
                         <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-white mt-4" style="width: 380px;">
                             <div class="row">
                                 <div class="col-8">
-                                    <span class="fs-5 fw-semibold">Usuarios añadidos</span>
+                                    <span class="fs-5 fw-semibold">Usuario seleccionado</span>
                                 </div>
                                 <div class="col-3">
                                     <img id="cerrarLista" src="./assets/cancel.png" alt="cerrar lista" width="25" height="25" style="cursor: pointer; margin-left: 88%;" (click)="cerrarLista()">
