--- a/NRP/src/app/components/menu/menu.component.html
+++ b/NRP/src/app/components/menu/menu.component.html
@@ -6,7 +6,7 @@
                 <img src="./assets/logoB.png" alt="logo" width="200" height="100" />
             </a>
             <ng-template #elseBlock>
-                <a class="navbar-brand" [routerLink]="['/inicio',usuario.id]">
+                <a class="navbar-brand" [routerLink]="['/inicio',usuario._id]">
                     <img src="./assets/logoB.png" alt="logo" width="200" height="100" />
                 </a>
             </ng-template>
