--- a/NRP/src/app/components/inicio/inicio.component.html
+++ b/NRP/src/app/components/inicio/inicio.component.html
@@ -21,7 +21,7 @@
       </div>
       <div class="row justify-content-end">
         <div class="col-1">
-          <a [routerLink]="['/crear-proyecto',usuario.id]"
+          <a [routerLink]="['/crear-proyecto',usuario._id]"
             ><img
               id="carpeta"
               src="./assets/carpeta.png"
