--- a/NRP/src/app/components/add-usuario-participante/add-usuario-participante.component.html
+++ b/NRP/src/app/components/add-usuario-participante/add-usuario-participante.component.html
@@ -23,9 +23,33 @@
                 <a [routerLink]="['/proyecto',proyecto._id]"><img class="mt-4" src="./assets/flecha-hacia-atras.png" alt="atras" width="50" height="50" /></a>
             </div>
         </div>
-        <h1>{{usuario.nombre}}</h1>
+
+        <div class="row">
+            <div class="col">
+                <h2 class="mt-3 ms-5">Añadir usuario al proyecto</h2>
+            </div>
+        </div>
+
+        <div class="mt-3 ms-5 row">
+            <label for="staticEmail" class="col-sm-2 col-form-label">Usuario</label>
+            <div class="col-sm-10 mt-2">
+              <span >{{usuario.nombre}}</span>
+            </div>
+          </div>
+          <form #formAddUsuario="ngForm" (ngSubmit)="anadirUsuarioProyecto()">
+            <div class="mt-3 ms-5 row">
+                <label for="inputPassword" class="col-sm-2 col-form-label">Peso del usuario</label>
+                <div class="col-sm-1">
+                    <input class="form-control" type="number" name="peso" #peso="ngModel" [(ngModel)] = "usuario.importancia" placeholder="[1 - 5]">
+              </div>
+            </div>
+            <div class="col-auto mt-3 ms-5">
+                <button  type="submit" class="btn btn-success mb-3" >Añadir usuario</button>
+              </div>
+          </form>
+         
         <!--Fin del contenido de INICIO-->
-    </div>
+        </div>
 </body>
 
 </html>
