--- a/NRP/src/app/components/add-usuario-participante/add-usuario-participante.component.html
+++ b/NRP/src/app/components/add-usuario-participante/add-usuario-participante.component.html
@@ -40,11 +40,11 @@
             <div class="mt-3 ms-5 row">
                 <label for="inputPassword" class="col-sm-2 col-form-label">Peso del usuario</label>
                 <div class="col-sm-1">
-                    <input class="form-control" type="number" name="peso" #peso="ngModel" [(ngModel)] = "usuario.importancia" placeholder="[1 - 5]">
+                    <input class="form-control" type="number" name="peso" #peso="ngModel" [(ngModel)] = "usuario.importancia" placeholder="[1 - 5]" required>
               </div>
             </div>
             <div class="col-auto mt-3 ms-5">
-                <button  type="submit" class="btn btn-success mb-3" >Añadir usuario</button>
+                <button  type="submit" class="btn btn-success mb-3" [disabled]="!formAddUsuario.form.valid" >Añadir usuario</button>
               </div>
           </form>
          
