--- a/NRP/src/app/components/proyecto/proyecto.component.html
+++ b/NRP/src/app/components/proyecto/proyecto.component.html
@@ -144,16 +144,24 @@
                     <div class="col-1">
                         <img id="addUsuario" src="./assets/add-user.png" alt="carpeta" width="55" height="55" (click)="mostrarListaClientes()" style="cursor: pointer;" />
                     </div>
+
+
+                    
+
                     <div class="row">
+                        <div *ngIf = "arrUsuariosNombre.length == 0" class="col-5 ms-3">
+                            <h2>- No hay ningún usuario añadido a tu proyecto</h2>
+                          </div>
                         <div class="col-9">
                             <ul class="list-group list-group-flush ms-3">
-                                <li *ngFor= "let usuarioProyecto of arrUsuariosNombre" class="list-group-item">
+                                <li *ngFor= "let usuarioProyecto of arrUsuariosNombre;let indice = index" class="list-group-item">
                                     <a [routerLink]="['/proyecto']">{{usuarioProyecto}}</a>
-                                    <img id="deleteUsuario" src="./assets/borrar-usuario.png" alt="Borrar usuario" width="40" height="40" style="cursor: pointer; margin-left: 88%;" />
+                                    <img id="deleteUsuario" src="./assets/borrar-usuario.png" alt="Borrar usuario" width="40" height="40" style="cursor: pointer; margin-left: 88%;" (click) = "deleteUsuarios(indice)" />
                                 </li>
                                
                             </ul>
                         </div>
+                        
                         <div id="ListaClientes" class="col-3">
                             <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-white mt-4" style="width: 380px;">
                                 <div class="row">
@@ -166,8 +174,9 @@
 
 
                                 </div>
+                                
                                 <div class="list-group list-group-flush  scrollarea ">
-                                    <div *ngFor="let usuarioAdd of arrUsuariosDisponibles" class="row m-3">
+                                    <div *ngFor="let usuarioAdd of arrUsuariosDisponibles;" class="row m-3">
                                         <div class="col-10">
                                             <strong>{{usuarioAdd.nombre}} </strong>
                                           
