--- a/NRP/src/app/components/inicio/inicio.component.html
+++ b/NRP/src/app/components/inicio/inicio.component.html
@@ -33,14 +33,15 @@
       </div>
       <div class="row">
         <div class="col">
-          <div *ngIf = "arrProyectosCreados.length == 0" class="ms-3">
+          <div *ngIf = "arrProyectosCreados.length == 0 || proyectosNull() == true" class="ms-3">
             <h2>No tienes ningún proyecto creado</h2>
           </div>
           <ul class="list-group list-group-flush ms-3">
-              <li *ngFor = "let proyecto of arrProyectosCreados" class="list-group-item">
+              <li *ngFor = "let proyecto of filtroProyectos()" class="list-group-item ">
                 <a [routerLink]="['/proyecto',proyecto._id]">
                   {{proyecto.nombre}}
                 </a>
+                </li>
             </ul>
             
         </div>
